--- a/src/style.css
+++ b/src/style.css
@@ -68,10 +68,10 @@ a:hover {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1280px;
   margin: 0 auto;
   background: #fff;
-  padding: 2rem;
+  padding: 5rem;
   
 }
 
@@ -136,6 +136,13 @@ a:hover {
   display: none;
 }
 
+.humburger, .mb-menu-close-btn{
+  font-size: 2rem;
+}
+
+.change-nav-link-color{
+  color: blue;
+}
 
 /*? MAIN SECTION STYLING */
 
@@ -171,9 +178,22 @@ a:hover {
     border-radius: 1rem;
     border: 2px solid gray;
     transition: all 0.3s linear;
+    font-weight: 500  ;
   }
 
   .mobile-menu.active{
     left: 50%;
+  }
+
+  .desktop-menu{
+    display: none;
+  }
+
+  .humburger{
+    display: block;
+  }
+
+  .humburger.hum-active{
+    display: block !important;
   }
 }
