minor bug fix now it is fine

--- a/src/style.css
+++ b/src/style.css
@@ -5,13 +5,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* border: 1px solid gray; */
+  
 }
 
 html,
 body {
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
+
 }
 
 body {
@@ -586,6 +588,30 @@ textarea {
 
 /* MEDIA QUERY FOR RESPONSIVE DESIGN */
 
+@media screen and (max-width : 992px) {
+  /* HERO SECTION */
+
+
+  #hero-section{
+    gap: 2rem;
+  }
+
+  .hero-main-heading{
+    font-size: 4.6rem  ;
+  }
+
+  .hero-section-image{
+    padding-block: 3rem;
+  }
+
+  .hero-section-image img{
+    width: 100%;
+
+  }
+
+}
+
+
 @media screen and (max-width: 768px) {
   /* HEADER SECTION  */
 
@@ -642,15 +668,22 @@ textarea {
     margin-top: 5rem;
   }
 
+  .hero-section-image img{
+    width: 80%;
+  }
+
+  .hero-btn-box{
+    margin-top: 2rem;
+  }
   /* PRODUCT BUYING SECTION */
 
   .product-card {
     flex-direction: column;
   }
   .product-content {
-    align-items: center;
-    text-align: center;
+    align-items: left;
     margin-bottom: 5rem;
+    width: 100%;
   }
 
   /* TASTY FRUITS SECTION */
@@ -705,4 +738,21 @@ textarea {
     font-size: 3.6rem;
   }
 
+  /* PRODUCT BUYING SECTION */
+
+  .product-card{
+    padding-inline: 2rem;
+  }
+
+  .product-content{
+    align-items: center;
+  }
+
+  /* CONTACT US */
+
+  #contact-us{
+    & h2{
+      font-size: 2.5rem;
+    }
+  }
 }
